- fixing z-index for Moorainbow and Chosen drop over Isis mod_status
- related to [#29011] *Color selector dropdowns display very poorly
- and [#29008] *Isis bottom status bar breaks dropdown display/access

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -537,3 +537,11 @@ ul.manager .height-50 .icon-folder-2 {
 	line-height: 35px;
 	font-size: 30px;
 }
+
+/* z-index issues */
+.moor-box {
+	z-index: 3;
+}
+.admin .chzn-container .chzn-drop {
+	z-index: 1200;
+}
